# supermux

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SCROLLBACK_SPEC.md  SECURITY.md  THIRD_PARTY_NOTICES.md  install.sh
.claude/: done-detection-audit.md  feat-remote-ssh-audit.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: audit.yml  ci.yml  install-smoke.yml  release.yml
agent_notes/: UX_DESIGN.md
design/: ACCEPTANCE.md  DEPLOY_DESIGN.md  README.md
design/specs/: 2026-06-05-one-line-install-design.md  2026-06-05-rich-history-design.md
docs/: SECRETS_1PASSWORD.md  SELF_HOST_DEV.md  TESTING.md  UX_NOTES.md
docs/superpowers/specs/: 2026-06-04-last-user-prompt-design.md  2026-06-05-rich-history-design.md  2026-06-28-snippets-and-discard-modal-design.md  (+4 more)
etc/: supermux-deploy-runner  supermux-deploy-self
etc/clawd-bin/: cargo
etc/sudoers.d/: supermux-deploy-self
etc/systemd/: amux-v3.service  supermux-deploy.path  supermux-deploy.service  supermux.service
plan/: REMOTE_PLAN.md  TECH_PLAN-v1-backup.md  TECH_PLAN.md  review-ceo.md  review-codex.md  review-eng.md  review-superpowers.md
research/: amux-feature-extract.md  cmux-amux-landscape.md  termius-ios-native-spec.md  user-vision.md
scripts/: build-icons.sh  build.sh  deploy-self.sh  deploy.sh  dev.sh  lint-microcopy.sh  migrate-v2.py  setup.sh  update.sh
server/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
server/migrations/: 0001_init.sql  0002_board.sql  0003_schedules.sql  0004_runtime_state.sql  0005_delegations.sql  0007_audit.sql  0008_capture_ansi.sql  0009_status_starting.sql  0010_board_agent.sql  0011_board_review_flags.sql  0012_push_subscriptions.sql  0013_board_three_lanes.sql  0014_schedule_prompt.sql  0015_boards.sql  0016_team_task_link.sql  0017_session_team_name.sql  0018_hosts.sql  0019_session_display_name.sql  0020_schedule_confirm_finish.sql  0021_schedule_bypass_permissions.sql  0022_dismissed_teammates.sql  0023_kimi_provider.sql
server/src/: audit.rs  auth.rs  claude_config.rs  config.rs  error.rs  external_edit.rs  hooks.rs  http.rs  lib.rs  log_redact.rs  main.rs  prefs.rs  public.rs  push.rs  sse.rs  state.rs  static_assets.rs
server/src/agents/: delegate.rs  mod.rs  skills.rs  supermux-task.md  wait.rs
server/src/board/: boards.rs  claim.rs  dispatch.rs  hook.rs  mod.rs  prefix.rs
server/src/claude_tools/: atomic.rs  mcp.rs  mod.rs  registry.rs
server/src/db/: audit.rs  board.rs  boards.rs  hosts.rs  mod.rs  prefs.rs  push.rs  runtime_state.rs  schedules.rs  sessions.rs  skills.rs  steering.rs  teams_dismissed.rs  tracked_files.rs
server/src/files/: mod.rs  path_safe.rs  range.rs  transport.rs
server/src/hosts/: bootstrap.rs  mod.rs
server/src/scheduler/: hook.rs  mod.rs  parser.rs  runner.rs  watch.rs
server/src/sessions/: activity.rs  auto_actions.rs  host_pool.rs  lifecycle.rs  mod.rs  pty.rs  recall.rs  resumable.rs  status.rs  teams.rs  tmux.rs  transport.rs
server/src/sessions/recall/: codex.rs  kimi.rs
server/src/sessions/steering/: deliver_loop.rs  mod.rs
server/src/teams/: board_sync.rs  mod.rs  model.rs  scan.rs  start.rs  watcher.rs
server/src/updates/: api.rs  exec.rs  mod.rs  preflight.rs  release.rs  tests.rs  version.rs
server/src/ws/: mod.rs  protocol.rs  streamer.rs
server/tests/: agents.rs  agents_m9.rs  archive_recover.rs  archive_removes.rs  auth.rs  board.rs  board_claim.rs  files.rs  files_transport.rs  hook_auth_scope.rs  host_pool.rs  hosts_db.rs  hosts_http.rs  http_session.rs  install_hooks_remote.rs  integration_remote.rs  lifecycle.rs  path_safe_proptest.rs  prefs_kv.rs  pty_ssh.rs  push_debounce.rs  reattach_multi_host.rs  recall_http.rs  resume_picker.rs  schedule_missed_tick.rs  scheduler.rs  static_assets.rs  status_detector.rs  status_detector_cold_start.rs  status_flow.rs  teams_dismiss.rs  teams_start.rs  updates_preflight.rs  wait_race.rs  ws_first_frame_auth.rs  ws_pty.rs
server/tests/fixtures/status/: binary_garbage.corrupt.txt  claude_accept_edits.idle.txt  claude_approve_action.waiting.txt  claude_bash_permission.waiting.txt  claude_bypass_permissions.idle.txt  claude_cogitating.active.txt  claude_completed_spinner.idle.txt  claude_composing.active.txt  claude_edit_permission.waiting.txt  claude_enter_to_select.waiting.txt  claude_esc_truncated.active.txt  claude_idle_prompt.idle.txt  claude_interrupted.waiting.txt  claude_long_running.active.txt  claude_numbered_choice.waiting.txt  claude_plan_mode.idle.txt  claude_pondered.idle.txt  claude_proceed_edit.waiting.txt  claude_proceed_yesno.waiting.txt  claude_reading_files.active.txt  claude_ready_prompt.idle.txt  claude_running_bash.active.txt  claude_searching.active.txt  claude_selector_menu.waiting.txt  claude_spinner_beaming.active.txt  claude_status_bar.idle.txt  claude_thinking_accept_edits.active.txt  claude_thinking_bypass.active.txt  claude_thinking_plan_mode.active.txt  claude_tool_call.active.txt  claude_trust_prompt.waiting.txt  codex_model_line.idle.txt  codex_working.active.txt  control_chars.corrupt.txt  mixed_unicode.corrupt.txt  shell_prompt_dollar.idle.txt  truncated_ansi.corrupt.txt
server/tests/snapshots/: status_detector__golden_classifications.snap
showcase/: README.md  package.json  record.ts  seed.ts  verification.json
skill/done/: BDRAG.done.json  DOCK.done.json  MHEADER.done.json  MODE.done.json  SYNC.done.json  board-U3-cmdk.done.json
tests/: test_deploy_nonroot.sh
tests/install/: build-local-tarball.sh  run-in-docker.sh  verify.sh
web/: .gitignore  ACCEPTANCE.md  PERF.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.mobile.config.ts  playwright.screens.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web/public/: brand-preview.html  manifest.json  offline.html  push-sw.js
web/scripts/: build-splash.mjs  size-budget.mjs
web/src/: App.tsx  env.ts  main.tsx
(+298 files in other folders)
