[package]
name = "supermux-server"
version = "3.0.0"
edition = "2021"
rust-version = "1.83"
authors = ["Sander Zakelijk"]
description = "Self-hosted dashboard for running a roomful of AI coding agents (Claude Code, Codex, shells) on top of tmux. Single Rust binary, embedded PWA."
license = "MIT"
repository = "https://github.com/sanderbz/supermux"
homepage = "https://github.com/sanderbz/supermux"
readme = "../README.md"
keywords = ["tmux", "ai", "agents", "dashboard", "claude"]
categories = ["command-line-utilities", "web-programming::http-server"]
# `publish = false`: we ship a single self-hosted binary (see scripts/deploy.sh)
# and have no crates.io release process yet. Flip to `true` if/when we decide to
# publish — but the README + deploy story is self-host first, not "cargo install".
publish = false

# server/ is its own workspace root (the repo top is intentionally NOT a Cargo
# workspace). resolver "3" is MSRV-aware: it honours the
# `rust-version = "1.83"` floor above when selecting transitive dep versions,
# so the resulting Cargo.lock builds on the pinned toolchain.
[workspace]
resolver = "3"

[dependencies]
# ── async runtime ──
tokio = { version = "1.43", features = ["full"] }       # rt, macros, fs, process, sync, time
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }  # BroadcastStream adapter for the /api/events SSE handler

# ── http ──
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }   # TLS
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit", "set-header"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"
mime_guess = "2.0"
rust-embed = { version = "8.5", features = ["mime-guess"] }  # embed web/dist on stable Rust

# ── ws ──
tokio-tungstenite = "0.24"

# ── database ──
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "json"
] }

# ── serialization ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ── time ──
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"                                            # cron parser

# ── tracing ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── auth/crypto ──
rand = "0.8"
base64 = "0.22"
constant_time_eq = "0.3"                                 # auth token compare

# ── web push (VAPID + RFC8291 http-ece) ──
# default-features = false drops the bundled isahc/curl HTTP client: we build the
# encrypted WebPushMessage with this crate and POST it via the project's existing
# rustls reqwest. web-push still pulls `ece` (RFC8291 payload encryption), which
# uses openssl for its crypto — pinned + vendored below so the build needs no
# system OpenSSL.
web-push = { version = "0.11.0", default-features = false }
# `ece` (web-push's payload-encryption dep) links OpenSSL. Pull it in directly
# with the `vendored` feature so OpenSSL compiles from source — `cargo build` is
# then self-contained on any machine (no system libssl headers required).
openssl = { version = "0.10", features = ["vendored"] }
# Pure-Rust ES256 (P-256) keygen for the persisted VAPID keypair. Same crate
# web-push uses internally for VAPID, pinned + default-features off (no openssl).
jwt-simple = { version = "0.12.16", default-features = false, features = ["pure-rust"] }
# Outbound HTTPS to push endpoints (FCM/Mozilla/Apple), rustls — matches the
# project's TLS stack. Promoted from a dev-dependency. `json` is for the
# edit-in-native-editor bridge's loopback self-call (open/result JSON bodies).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# ── misc ──
anyhow = "1.0"
async-trait = "0.1"                                       # async trait methods for FileTransport + PtyReader
futures-util = { version = "0.3", default-features = false, features = ["std"] }  # SSE preamble chain in updates::api (+ everything reqwest already pulls)
thiserror = "2.0"
once_cell = "1.20"
dashmap = "6.1"                                          # per-session lock/stream maps (AppState)
regex = "1.11"
nix = { version = "0.29", features = ["signal", "process", "fs"] }  # SIGTERM Claude; fs = mkfifo/open/Mode (pty FIFO)
notify = "7.0"                                           # FS watch for hot-reload (optional)
shell-escape = "0.1"
shellexpand = "3.1"
url = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"                                             # home dir
which = "7.0"                                            # locate claude/tmux

[features]
# Gates test-only helpers (e.g. `ReleaseCache::seed`) that would otherwise be
# compiled into release production binaries. Auto-enabled for `cargo test`
# (both unit + integration) via the dev-dependencies trick below: any path
# that pulls supermux-server's library with default features gets it.
# A real production release build (`cargo build --release`) does NOT enable
# `test-support`, so the helpers compile out.
test-support = []

[dev-dependencies]
# Self-dep with `test-support` so any `cargo test` (debug or release) sees the
# test-only helpers, while production builds do not.
supermux-server = { path = ".", features = ["test-support"] }

tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }  # WS client Stream/Sink ext (ws tests)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
pretty_assertions = "1.4"
insta = "1.42"                                           # snapshot tests for status detector
proptest = "1.6"                                         # required path_safe jail-escape property test (§7.1)
